# iis-projekt

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: client-ci-cd.yml  data-pipeline.yml  metrics.yml  service-ci-cd.yml  training-pipeline.yml
gx/expectations/: .ge_store_backend_id
models/sp500/: model.onnx  model_regression.onnx  sp500_model.onnx  sp500_model_ModelType.LATEST.onnx  sp500_model_latest.onnx  sp500_model_regression.onnx  sp500_model_regression_ModelType.LATEST.onnx  sp500_model_regression_latest.onnx
reports/sites/: stability_tests.html
reports/sp500_model/: metrics.txt
reports/sp500_model_regression/: metrics.txt
src/: config.py
src/client/: package-lock.json  package.json
src/client/public/: index.html
src/client/src/: App.css  App.js
src/client/src/helpers/: date.js
src/client/src/pages/: Dashboard.js  Home.js  Nopage.js
src/data/: evaluate_production_model.py  fetch_data.py  fetch_test.py  ks.py  process_data.py  split_data.py  stability_tests.py  validate.py
src/data/helpers/: send_email.py
src/models/: predict_model.py  predict_model_test.py  train_model.py  train_model_test.py
src/models/helpers/: helper_dataset.py  helper_training.py  model_registry.py
src/models/mlruns/0/: meta.yaml
src/models/models/sp500/: model.onnx  sp500_model.onnx
src/serve/: experiments.py  main.py
src/serve/tests/: api_test.py
