[tool.poetry]
name = "iis-projekt"
version = "0.1.0"
description = ""
authors = ["jernej10 <jernej.ofic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pytest = "^8.2.1"
yfinance = "^0.2.40"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
fetch-data = "python3 -m src.data.fetch_data"
process-data = "python3 -m src.data.process_data"